--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+  
     {
       "name": "Pico Debug",
       "cwd": "${workspaceRoot}",
@@ -13,6 +14,7 @@
       "servertype": "openocd",
       "gdbPath": "arm-none-eabi-gdb",
       "device": "RP2040",
+      // "showDevDebugOutput": "raw",
       "searchDir": [
           "${env:PICO_SDK_PATH}/../openocd/tcl",
       ],
@@ -21,7 +23,7 @@
         "target/rp2040.cfg"
         ],
       "svdFile": "${env:PICO_SDK_PATH}/src/rp2040/hardware_regs/rp2040.svd",
-      "runToEntryPoint": "main",
+      // "runToEntryPoint": "main",
       // Give restart the same functionality as runToEntryPoint - main
       "postRestartCommands": [
           "break main",
