--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
   "files.associations": {
     "lcd_1in14_v2.h": "c",
     "stdlib.h": "c",
-    "pico.h": "c"
+    "pico.h": "c",
+    "dev_config.h": "c"
   },
 }
