--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ include_directories(./lib/Infrared)
 
 # 生成可执行文件
 add_executable(main 
-main.c
+    main.c
 )
 
 # enable usb output, disable uart output
@@ -32,4 +32,12 @@ pico_enable_stdio_uart(main 1)
 # create map/bin/hex/uf2 file etc.
 pico_add_extra_outputs(main)
 
-target_link_libraries(main LCD Infrared GUI Fonts Config pico_stdlib hardware_spi)
+target_link_libraries(main
+    LCD
+    Infrared
+    GUI
+    Fonts
+    Config
+    pico_stdlib
+    hardware_spi
+)
