--- a/lib/GUI/CMakeLists.txt
+++ b/lib/GUI/CMakeLists.txt
@@ -2,8 +2,8 @@
 # 并将名称保存到 DIR_GUI_SRCS 变量
 aux_source_directory(. DIR_GUI_SRCS)
 
-include_directories(../Config)
+include_directories(../LCD)
 
 # 生成链接库
 add_library(GUI ${DIR_GUI_SRCS})
-target_link_libraries(GUI PUBLIC Config)
+target_link_libraries(GUI PUBLIC)
