--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,8 @@
     "lcd_1in14_v2.h": "c",
     "stdlib.h": "c",
     "pico.h": "c",
-    "dev_config.h": "c"
+    "dev_config.h": "c",
+    "*.tcc": "c",
+    "limits": "c"
   },
 }
