--- a/fonts/CMakeLists.txt
+++ b/fonts/CMakeLists.txt
@@ -3,10 +3,10 @@ cmake_minimum_required(VERSION 3.12)
 # Library
 add_library(fonts
     fonts.c
-    liberation24pt.c
-    liberation26pt.c
-    liberation28pt.c
+    # liberation24pt.c
+    # liberation26pt.c
+    # liberation28pt.c
     liberation36pt.c
     liberation48pt.c
-    liberation72pt.c
+    # liberation72pt.c
 )
