--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,8 @@
      },
   "cmake.buildBeforeRun": true,
   "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
-  "cortex-debug.openocdPath": "${env:PICO_SDK_PATH}/../openocd/src/openocd",
+  "cortex-debug.openocdPath.windows": "openocd.exe",
+  "cortex-debug.openocdPath.osx": "${env:PICO_SDK_PATH}/../openocd/src/openocd",
   "files.associations": {
     "lcd_1in14_v2.h": "c",
     "stdlib.h": "c",
