--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ pico_sdk_init()
 add_subdirectory(fonts)
 
 # Executable
-add_executable(main 
+add_executable(hamtimer 
     main.c
     display.c
     config.c
@@ -16,13 +16,13 @@ add_executable(main
 )
 
 # enable usb output, disable uart output
-pico_enable_stdio_usb(main 0)
-pico_enable_stdio_uart(main 1)
+pico_enable_stdio_usb(hamtimer 0)
+pico_enable_stdio_uart(hamtimer 1)
 
 # create map/bin/hex/uf2 file etc.
-pico_add_extra_outputs(main)
+pico_add_extra_outputs(hamtimer)
 
-target_link_libraries(main
+target_link_libraries(hamtimer
     pico_stdlib
     hardware_spi
     hardware_pwm
