--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,31 +1,21 @@
 {
-  "cmake.configureOnOpen": false,
-  "cmake.statusbar.advanced": {
-    "debug" : {
-      "visibility": "hidden"
+    // These settings tweaks to the cmake plugin will ensure
+    // that you debug using cortex-debug instead of trying to launch
+    // a Pico binary on the host
+    "cmake.statusbar.advanced": {
+        "debug": {
+            "visibility": "hidden"
+        },
+        "launch": {
+            "visibility": "hidden"
+        },
+        "build": {
+            "visibility": "hidden"
+        },
+        "buildTarget": {
+            "visibility": "hidden"
+        }
     },
-    "launch" : {
-      "visibility": "hidden"
-    },
-    // "build" : {
-    //   "visibility": "hidden"
-    //            },
-    "buildTarget" : {
-      "visibility": "hidden"
-               },
-     },
-  "cmake.buildBeforeRun": true,
-  "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
-  "cortex-debug.openocdPath.windows": "openocd.exe",
-  "cortex-debug.openocdPath.osx": "${env:PICO_SDK_PATH}/../openocd/src/openocd",
-  "files.associations": {
-    "lcd_1in14_v2.h": "c",
-    "stdlib.h": "c",
-    "pico.h": "c",
-    "dev_config.h": "c",
-    "*.tcc": "c",
-    "limits": "c",
-    "stdint.h": "c",
-    "config.h": "c"
-  },
+    "cmake.buildBeforeRun": true,
+    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
